# advanced_robotics_franka_controllers

./: CMakeLists.txt  README.md  add_controller.py  advanced_robotics_franka_controllers_plugin.xml  package.xml
MPCC/: .gitignore  CMakeLists.txt  config.h  install.sh  main.cpp  panda_vis.py  types.cpp  types.h
MPCC/Constraints/: bounds.cpp  bounds.h  constraints.cpp  constraints.h
MPCC/Constraints/SelfCollision/: SelfCollisionModel.cpp  SelfCollisionModel.h
MPCC/Constraints/SelfCollision/NNmodel/: self_collision.pkl
MPCC/Constraints/SelfCollision/NNmodel/backup/parameter/: bias_1.txt  bias_2.txt
MPCC/Constraints/SelfCollision/NNmodel/parameter/: bias_0.txt  bias_1.txt  bias_2.txt  bias_3.txt  weight_0.txt  weight_1.txt  weight_2.txt  weight_3.txt
MPCC/Cost/: cost.cpp  cost.h
MPCC/Interfaces/: osqp_interface.cpp  osqp_interface.h  solver_interface.h
MPCC/MPC/: mpc.cpp  mpc.h
MPCC/Model/: model.cpp  model.h  robot_data.h  robot_model.cpp  robot_model.h
MPCC/Params/: bounds.json  cost.json  model.json  normalization.json  params.cpp  params.h  track.cpp  track.h  track.json  track.py
MPCC/Spline/: arc_length_spline.cpp  arc_length_spline.h  cubic_spline.cpp  cubic_spline_rot.cpp
MPCC/Tests/: constraints_test.h  cost_test.h  main_test.cpp  robot_model_test.h  self_collision_test.h  spline_test.h
config/: advanced_robotics_franka_controllers.yaml  default_combined_controllers_single.yaml  franka_combined_control_single_node.yaml
include/advanced_robotics_franka_controllers/: NJSDF.h  common.h  custom_controler.h  default_controller.h  jh_controller.h  robot.h
launch/: custom_controler.launch  default_controller.launch  jh_controller.launch  robot.rviz
src/: NJSDF.cpp  custom_controler.cpp  default_controller.cpp  jh_controller.cpp  robot.cpp
